fix insta logo on mobile

--- a/style/header.css
+++ b/style/header.css
@@ -36,5 +36,5 @@ header{
     width: 2.5%;
     float: right;
     margin-right: 2.2%;
-    margin-top: 2%;
+    margin-top: 2.3%;
 }
